<resources>
    <string name="app_name">CBEscanner</string>
    <string name="lector_de_c_digo_de_barras">Lector de Código de Barras</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="configuraci_n_de_la_base_de_datos">Configuración de la base de datos</string>
    <string name="ip_de_la_base_de_datos">IP de la base de datos</string>
    <string name="nombre_de_la_base_de_datos">Nombre de la base de datos</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="verificar">Verificar</string>
    <string name="configurar_base_de_datos">Configurar Base de Datos</string>
    <string name="regresar">Regresar</string>
    <string name="btnBuscar">buscar</string>
</resources>